syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "jp.glory.practice.grpc.user.adaptor.web";
package user;


service RegisterUserService {
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse) {}
}

service UpdateUserService {
  rpc Update(UpdateUserRequest) returns (google.protobuf.Empty) {}
}

service GetUserService {
  rpc GetUserById(GetUserByIdRequest) returns (UserDetailResponse) {}
}

message RegisterUserRequest {
  string user_name = 1;
  string birthday = 2;
}

message RegisterUserResponse {
  string user_id = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string user_name = 2;
  string birthday = 3;
}

message GetUserByIdRequest {
  string user_id = 1;
}

message UserDetailResponse {
  string user_id = 1;
  string user_name = 2;
  string birthday = 3;
}